# dikto

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  SECURITY.md  build-app.sh  deny.toml  notarize.sh  package-dmg.sh  package-lock.json  package.json  release.sh
.claude/: settings.json
.claude/hooks/: pre-commit-checks.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  build.yml  distribution-test.yml  release.yml  test.yml
DiktoApp/Resources/: Info.plist
DiktoApp/Sources/: AppState.swift  DiktoApp.swift  KeyCodes.swift  MenuBarView.swift  OnboardingView.swift  PermissionView.swift  RecordingOverlay.swift  SettingsView.swift  Theme.swift
Formula/: dikto.rb
SottoApp/: project.yml
SottoApp/Resources/: Info.plist
SottoApp/SottoApp.xcodeproj/: project.pbxproj
SottoApp/Sources/: AppState.swift  MenuBarView.swift  PermissionView.swift  RecordingOverlay.swift  SettingsView.swift  SottoApp.swift
crates/dikto-cli/src/: main.rs  setup.rs
crates/dikto-core/: Cargo.toml
crates/sotto-cli/: Cargo.toml
crates/sotto-cli/src/: main.rs  setup.rs
crates/sotto-core/: Cargo.toml
crates/sotto-core/examples/: listen.rs
crates/sotto-core/src/: config.rs  engine.rs  lib.rs  models.rs  transcribe.rs
crates/uniffi-bindgen/: Cargo.toml
docs/: index.html  install.sh
src/: config.ts  indicator.ts  recorder.ts  server.ts  setup.ts  speech-recorder.d.ts  stream-transcriber.ts  types.ts
test/: indicator.test.ts  recorder.test.ts  stream-transcriber.test.ts
(+14 files in other folders)
