[package]
name = "sotto-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "sotto_core"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
parakeet-rs = "0.2"
ort = "=2.0.0-rc.10"
cpal = "0.15"
voice_activity_detector = "0.2.1"
ringbuf = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
dirs = "6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
